--- a/site/product.html
+++ b/site/product.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>Swiper demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../style/reset.css">
+    <link rel="stylesheet" href="style/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -18,8 +18,8 @@
 
                 <div class="header__inner">
 
-                    <a class="header__logo" href="#">
-                        <img src="../../logo/logo.png" alt="ELECTROWHEELS">
+                    <a class="header__logo" href="index.html">
+                        <img src="logo/logo.png" alt="ELECTROWHEELS">
                     </a>
 
                     <div id="headerBurger" class="header__burger">
@@ -30,25 +30,25 @@
                         <ul class="header__list">
 
                             <li class="header__item">
-                                <a href="#" class="header__link">
+                                <a href="katalog.html" class="header__link">
                                     Каталог
                                 </a>
 
                                 <ul class="header__sublist">
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">Електросамокати</a>
+                                        <a class="header__sublink" href="onetype_katalog.html?type=scooter">Електросамокати</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">Моноколеса</a>
+                                        <a class="header__sublink" href="onetype_katalog.html?type=monowheel">Моноколеса</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">Гіроскутери</a>
+                                        <a class="header__sublink" href="onetype_katalog.html?type=giroscooter">Гіроскутери</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">
+                                        <a class="header__sublink" href="onetype_katalog.html?type=girobord">
                                             Гіроборди 
                                         </a>
                                     </li>
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="inner_name">
                     <div class="name_product">
-                        <h1>Електросамокат Xiaomi Mi Electric Scooter Essential</h1>
+                        <h1 id="name_product">Електросамокат Xiaomi Mi Electric Scooter Essential</h1>
                     </div>
                 </div>
             </div>
@@ -93,18 +93,18 @@
                         <div class="slider_wrapper">
                             <div class="swiper-container swiper_container-product gallery-top">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/1.jpg" alt="">
+                                    <!-- <div class="swiper-slide swiper-slide_product">
+                                        <img src="Goods/Самокаты/Xiaomi/1.jpg" alt="">
+                                    </div> -->
+                                    <!-- <div class="swiper-slide swiper-slide_product">
+                                        <img src="Goods/Самокаты/Xiaomi/2.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/2.jpg" alt="">
+                                        <img src="Goods/Самокаты/Xiaomi/3.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/3.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/4.jpg" alt="">
-                                    </div>
+                                        <img src="Goods/Самокаты/Xiaomi/4.jpg" alt="">
+                                    </div> -->
 
                                 </div>
                                 <!-- Add Arrows -->
@@ -113,18 +113,7 @@
                             </div>
                             <div class="swiper-container swiper_container-product gallery-thumbs">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/1.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/2.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/3.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide swiper-slide_product">
-                                        <img src="../../Goods/Самокаты/Xiaomi/4.jpg" alt="">
-                                    </div>
+
 
                                 </div>
                             </div>
@@ -136,7 +125,7 @@
                         <div class="product_info">
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="../../icons/product_info/speedometr.png" width="25px" alt="">
+                                    <img src="icons/product_info/speedometr.png" width="25px" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Максимальна швидкість</p>
@@ -145,7 +134,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="../../icons/product_info/wheel.png" alt="">
+                                    <img src="icons/product_info/wheel.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Діаметр колес</p>
@@ -154,7 +143,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="../../icons/product_info/road.png" alt="">
+                                    <img src="icons/product_info/road.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Запас ходу</p>
@@ -163,7 +152,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="../../icons/product_info/blade.png" alt="">
+                                    <img src="icons/product_info/blade.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Потужність мотору</p>
@@ -172,7 +161,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="../../icons/product_info/giryz.png" alt="">
+                                    <img src="icons/product_info/giryz.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Вага</p>
@@ -181,7 +170,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="../../icons/product_info/person.png" alt="">
+                                    <img src="icons/product_info/person.png" alt="" width="40px" height="40px">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Максимальна нагрузка</p>
@@ -194,21 +183,12 @@
 
                     <div class="right_part">
                         <div class="price-product">
-                            <div class="in_stock">
-                                <div class="galka">
-                                    <img src="../../logo/galka.png" width="25px" alt="">
-                                </div>
-                                <div class="stock_text">Є в наявності</div>
+                            <div class="in_stock" id="if_stock">
+
                             </div>
                             <div class="buy_product">
-                                <div class="product_price">12 999 ₴</div>
-                                <div class="button_buy">
-                                    <div class="buskett">
-                                        <img src="../../icons/new_basket3.png" alt="">
-                                    </div>
-                                    <div class="word_buy">
-                                        <p>Купити</p>
-                                    </div>
+                                <div class="product_price" id="price_product">12 999 ₴</div>
+                                <div class="button_buy" id="js_button">
 
                                 </div>
                             </div>
@@ -225,13 +205,13 @@
     <div class="title_footer">
         <div class="logo_contacts">
             <div class="footer_logo">
-                <img src="../../logo/logo.png" width="160px" alt="logo">
+                <img src="logo/logo.png" width="160px" alt="logo">
             </div>
             <div class="footer_contacts">
-                <img src="../../icons/instagram.png" alt="">
-                <img src="../../icons/telegram.png" alt="">
-                <img src="../../icons/facebook.png" alt="">
-                <img src="../../icons/youtube.png" alt="">
+                <img src="icons/instagram.png" alt="">
+                <img src="icons/telegram.png" alt="">
+                <img src="icons/facebook.png" alt="">
+                <img src="icons/youtube.png" alt="">
             </div>
         </div>
         <div class="container">
@@ -308,6 +288,8 @@
             body.classList.remove('_lock')
         }
     </script>
+    <script src="js/ajax_request.js"></script>
+    <script src="js/product_page.js"></script>
 </body>
 
 </html>
