--- a/site/Swiper/products/scooter-xiaomi.html
+++ b/site/Swiper/products/scooter-xiaomi.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>Swiper demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="../../style/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 
 <body>
@@ -18,8 +18,8 @@
 
                 <div class="header__inner">
 
-                    <a class="header__logo" href="index.html">
-                        <img src="logo/logo.png" alt="ELECTROWHEELS">
+                    <a class="header__logo" href="#">
+                        <img src="../../logo/logo.png" alt="ELECTROWHEELS">
                     </a>
 
                     <div id="headerBurger" class="header__burger">
@@ -30,25 +30,25 @@
                         <ul class="header__list">
 
                             <li class="header__item">
-                                <a href="katalog.html" class="header__link">
+                                <a href="#" class="header__link">
                                     Каталог
                                 </a>
 
                                 <ul class="header__sublist">
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="onetype_katalog.html?type=scooter">Електросамокати</a>
+                                        <a class="header__sublink" href="#">Електросамокати</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="onetype_katalog.html?type=monowheel">Моноколеса</a>
+                                        <a class="header__sublink" href="#">Моноколеса</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="onetype_katalog.html?type=giroscooter">Гіроскутери</a>
+                                        <a class="header__sublink" href="#">Гіроскутери</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="onetype_katalog.html?type=girobord">
+                                        <a class="header__sublink" href="#">
                                             Гіроборди 
                                         </a>
                                     </li>
@@ -56,20 +56,16 @@
                             </li>
 
                             <li class="header__item">
-                                <a href="contacts.html" class="header__link">Контакти</a>
+                                <a href="#" class="header__link">Акції</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="about_us.html" class="header__link">Про нас</a>
+                                <a href="#" class="header__link">Про нас</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="promotions.html" class="header__link">Акції</a>
+                                <a href="#" class="header__link">Контакти</a>
                             </li>
-
-
-
-
 
                         </ul>
                     </nav>
@@ -85,7 +81,7 @@
             <div class="container">
                 <div class="inner_name">
                     <div class="name_product">
-                        <h1 id="nameid_product">Електросамокат Xiaomi Mi Electric Scooter Essential</h1>
+                        <h1>Електросамокат Xiaomi Mi Electric Scooter Essential</h1>
                     </div>
                 </div>
             </div>
@@ -97,6 +93,18 @@
                         <div class="slider_wrapper">
                             <div class="swiper-container swiper_container-product gallery-top">
                                 <div class="swiper-wrapper">
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/1.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/2.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/3.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/4.jpg" alt="">
+                                    </div>
 
                                 </div>
                                 <!-- Add Arrows -->
@@ -105,7 +113,18 @@
                             </div>
                             <div class="swiper-container swiper_container-product gallery-thumbs">
                                 <div class="swiper-wrapper">
-
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/1.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/2.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/3.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide swiper-slide_product">
+                                        <img src="../../Goods/Самокаты/Xiaomi/4.jpg" alt="">
+                                    </div>
 
                                 </div>
                             </div>
@@ -114,26 +133,10 @@
 
 
 
-                    </div>
-
-                    <div class="right_part">
-                        <div class="price-product">
-                            <div class="in_stock" id="if_stock">
-
-                            </div>
-                            <div class="buy_product">
-                                <div class="product_price" id="price_product">12 999 ₴</div>
-                                <div class="button_wrapper" id="js_button">
-
-                                </div>
-
-
-                            </div>
-                        </div>
                         <div class="product_info">
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="icons/product_info/speedometr.png" width="25px" alt="">
+                                    <img src="../../icons/product_info/speedometr.png" width="25px" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Максимальна швидкість</p>
@@ -142,16 +145,16 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="icons/product_info/wheel.png" alt="">
+                                    <img src="../../icons/product_info/wheel.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Діаметр колес</p>
-                                    <p class="characteristics_p2">9 дюйм.</p>
+                                    <p class="characteristics_p2">9 дюймов</p>
                                 </div>
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="icons/product_info/road.png" alt="">
+                                    <img src="../../icons/product_info/road.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Запас ходу</p>
@@ -160,7 +163,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="icons/product_info/blade.png" alt="">
+                                    <img src="../../icons/product_info/blade.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Потужність мотору</p>
@@ -169,7 +172,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="icons/product_info/giryz.png" alt="">
+                                    <img src="../../icons/product_info/giryz.png" alt="">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Вага</p>
@@ -178,7 +181,7 @@
                             </div>
                             <div class="characteristics">
                                 <div class="characteristics_pht">
-                                    <img src="icons/product_info/giryz.png" alt="">
+                                    <img src="../../icons/product_info/person.png" alt="" width="40px" height="40px">
                                 </div>
                                 <div class="characteristics_txt">
                                     <p class="characteristics_p1">Максимальна нагрузка</p>
@@ -186,31 +189,56 @@
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+
+                    <div class="right_part">
+                        <div class="price-product">
+                            <div class="in_stock">
+                                <div class="galka">
+                                    <img src="../../logo/galka.png" width="25px" alt="">
+                                </div>
+                                <div class="stock_text">Є в наявності</div>
+                            </div>
+                            <div class="buy_product">
+                                <div class="product_price">12 999 ₴</div>
+                                <div class="button_buy">
+                                    <div class="buskett">
+                                        <img src="../../icons/new_basket3.png" alt="">
+                                    </div>
+                                    <div class="word_buy">
+                                        <p>Купити</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
-
             </div>
+
+
         </div>
-
-
-    </div>
     </div>
     <div class="title_footer">
         <div class="logo_contacts">
             <div class="footer_logo">
-                <img src="logo/logo.png" alt="logo">
+                <img src="../../logo/logo.png" width="160px" alt="logo">
             </div>
             <div class="footer_contacts">
-                <img src="icons/instagram.png" alt="">
-                <img src="icons/telegram.png" alt="">
-                <img src="icons/facebook.png" alt="">
-                <img src="icons/youtube.png" alt="">
+                <img src="../../icons/instagram.png" alt="">
+                <img src="../../icons/telegram.png" alt="">
+                <img src="../../icons/facebook.png" alt="">
+                <img src="../../icons/youtube.png" alt="">
             </div>
         </div>
         <div class="container">
             <div class="innerFooter">
                 <footer class="footer">
+
+
                     <div class="footer_text">
                         <p>У нашому інтернет магазині hoverboard.com.ua ви можете купити недорого Ninebot Mini (Найнбот Міні) за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір.
                             На сторінках нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 і повний опис товару.</p>
@@ -280,8 +308,6 @@
             body.classList.remove('_lock')
         }
     </script>
-    <script src="js/ajax_request.js"></script>
-    <script src="js/product_page.js"></script>
 </body>
 
 </html>
