--- a/site/about_us.html
+++ b/site/about_us.html
@@ -13,11 +13,11 @@
 <body>
     <div class="wrapper">
         <header class="header header--kat">
-            <div class="container kat">
+            <div class="container">
 
                 <div class="header__inner">
 
-                    <a class="header__logo" href="#">
+                    <a class="header__logo" href="index.html">
                         <img src="logo/logo.png" alt="ELECTROWHEELS">
                     </a>
 
@@ -78,149 +78,40 @@
             </div>
         </header>
 
-
-
         <div class="katalog_title">
             <div class="container kat">
                 <div class="title_inner">
-                    <h1>Каталог товарів</h1>
+                    <h1>Ведуться технічні роботи</h1>
                 </div>
             </div>
         </div>
-        <div class="katalog">
-            <div class="container kat">
-                <div class="katalog_inner">
 
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=scooter" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/1.jpg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Електросамокати</p>
-                            </div>
-                        </a>
+        <div class="title_contacts">
+            <div class="container">
+                <div class="inner_contacts">
+                    <div class="text_contacts">
+                        <p>Основна ідеологія нашого сайту полягає в наданні допомоги кожному нашому клієнту в підборі і замовленні зручного і доступного за ціною транспортного засобу. Кроки, які робить наша команда в цьому напрямку:</p>
 
-                    </div>
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=monowheel" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/2.png" alt="">
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Моноколеса</p>
-                            </div>
-                        </a>
+                        <p>постійний моніторинг ринку новинок електротранспорту засобів;<br> своєчасне оновлення асортименту пропонованого товару;<br> гнучка цінова політика, орієнтована на фінансові можливості потенційних покупців і постійних клієнтів;<br>                            максимально докладно розкрита інформація щодо технічних характеристик моделей, представлених на сайті girosmart.com.ua.<br> Місія нашої компанії полягає в наданні права кожному охочому стати власником сучасного і якісного електротранспорту
+                            з мінімальними витратами тимчасових і матеріальних ресурсів. Ми орієнтовані на задоволення потреб кожного клієнта.</p>
 
-                    </div>
+                        <p>Асортимент магазину включає моделі для дітей та дорослих</p>
 
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=giroscooter" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/3.jpg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Гiроскутери</p>
-                            </div>
-                        </a>
+                        <p>Завдяки великому практичному досвіду наших співробітників і грамотно організованою логістичної системі ми здатні задовольнити запити клієнта будь-якої вікової групи. На нашому сайті ви можете придбати наступні вироби:</p>
 
-                    </div>
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=girobord" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/4.jpg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Гiроборди</p>
-                            </div>
-                        </a>
+                        <p>гіроборди;<br> гіроскутери 6,5;<br> гіроскутери 8;<br> гіроскутери 10;<br> гіроскутери 10,5;<br> електросамокати;
+                        </p>
 
+                        <p>Наявність такого широкого асортименту товару на нашому сайті обумовлено різноманітністю смаків, потреб і фінансових можливостей покупців.</p>
+
+                        <p>Оскільки ми орієнтовані на задоволення попиту з боку покупця, то зацікавлені в тому, щоб вибір на нашому сайті був широким, а інформація про товар і його ключових характеристиках - розкритою повністю. Фото кожної моделі також додається
+                            до опису характеристик.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Електросамокати</h1>
-                </div>
-            </div>
-        </div>
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="scooter">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Моноколеса</h1>
-                </div>
-            </div>
-        </div>
 
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="monowheel">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Гіроскутери</h1>
-                </div>
-            </div>
-        </div>
-
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="giroscooter">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Гіроборди</h1>
-                </div>
-            </div>
-        </div>
-
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="girobord">
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="title_footer">
             <div class="logo_contacts">
