--- a/site/index.html
+++ b/site/index.html
@@ -66,16 +66,20 @@
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Акції</a>
+                                <a href="contacts.html" class="header__link">Контакти</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Про нас</a>
+                                <a href="about_us.html" class="header__link">Про нас</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Контакти</a>
+                                <a href="promotions.html" class="header__link">Акції</a>
                             </li>
+
+
+
+
 
                         </ul>
                     </nav>
@@ -115,15 +119,9 @@
                         <div class="swiper-button-next"></div>
                         <div class="swiper-button-prev"></div>
                     </div>
-
-
-
                 </div>
-
             </div>
         </section>
-
-
         <div class="title2">
             <img src="images/bg_01.jpg" alt="" class="title2_img ">
             <div class="container ">
@@ -148,7 +146,7 @@
             </div>
         </div>
 
-        <div class="title3 ">
+        <div class="title3">
             <img src="images/bg_02.jpg" alt=" " class="title3_img ">
             <div class="container ">
                 <div class="innerRiznomanit ">
@@ -183,201 +181,64 @@
         <div class="title4 ">
             <div class="container ">
                 <div class="innerScooter ">
-
                     <div class="goods ">
-
                         <div class="line " id="goods_container">
-
-                            <!-- <div class="good ">
-                                <div class="imgs "><img src="Goods/Гироскутеры/ninebot/1.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Гiроскутер NineBot Mini Black Original 4 10.5</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>12 999 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div> -->
-
-                            <!-- <div class="good ">
-                                <div class="imgs "><img src="Goods/Самокаты/Xiaomi/1.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Електросамокат Xiaomi Mi Electric Scooter M365</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>12 999 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-
-                            </div>
-                            <div class="good ">
-                                <div class="imgs "><img src="Goods/Моноколеса/V8F/7.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Моноколесо InMotion SCV V8F Black</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>25 999 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div>
-                            <div class="good ">
-                                <div class="imgs "><img src="Goods/Гироборды/SMART/2.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Гіроборд Smart Balance Pro AllRoad 10.5</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>5 199 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div>
-                            <div class="good ">
-                                <div class="imgs "><img src="Goods/Гироборды/Likebike/1.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Гіроборд Like.Bike X10i (turkish green)</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>5 999 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div>
-                            <div class="good ">
-                                <div class="imgs "><img src="Goods/Моноколеса/Segway/1.jpg " alt=" " id="goods_img "></div>
-                                <div class="product_name ">
-                                    <p>Моноколесо Segway Ninebot Z10</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>44 990 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div>
-
-                            <div class="good ">
-                                <div class="imgs "><img src="Goods/Гироскутеры/Airwheel 2/1.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Гіроскутер AirWheel S3T+ White-Orange</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>44 990 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div>
-
-                            <div class="good ">
-                                <div class="imgs "><img src="Goods/Самокаты/Segway/1.jpg " alt=" "></div>
-                                <div class="product_name ">
-                                    <p>Електросамокат Segway Ninebot ES4 Dark Grey</p>
-                                </div>
-                                <div class="price_busket ">
-                                    <div class="price ">
-                                        <p>15 999 ₴</p>
-                                    </div>
-                                    <div class="busket ">
-                                        <img src="icons/new_basket.png " alt=" ">
-                                    </div>
-                                </div>
-                                <div class="stock ">
-                                    <p>Є в наявноcті</p>
-                                </div>
-                            </div> -->
-
                         </div>
-
                     </div>
-
-
-
                 </div>
             </div>
         </div>
-        <div class="title_footer ">
-            <div class="logo_contacts ">
-                <div class="footer_logo ">
-                    <img src="logo/logo.png " alt="logo ">
-                </div>
-                <div class="footer_contacts ">
-                    <img src="icons/instagram.png " alt=" ">
-                    <img src="icons/telegram.png " alt=" ">
-                    <img src="icons/facebook.png " alt=" ">
-                    <img src="icons/youtube.png " alt=" ">
-                </div>
-            </div>
-            <div class="container ">
-                <div class="innerFooter ">
-                    <footer class="footer ">
 
 
-                        <div class="footer_text ">
-                            <p>У нашому інтернет магазині ElectroWheels ви можете купити персональний електротранспорт за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір. На сторінках
-                                нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 рік.</p>
+
+        <div class="title_footer">
+            <div class="container">
+                <footer class="footer">
+                    <div class="logo_contacts ">
+                        <div class="footer_logo ">
+                            <img src="logo/logo.png " alt="logo ">
                         </div>
-                    </footer>
-                </div>
-            </div>
-            <div class="contacts_info ">
-                <div class="contacts ">
-                    <div class="phone "><img src="./icons/phone.png " alt="phone "></div>
-                    <div class="number ">
-                        <p>096-760-52-21</p>
+                        <div class="footer_contacts">
+                            <img src="icons/instagram.png " alt=" ">
+                            <img src="icons/telegram.png " alt=" ">
+                            <img src="icons/facebook.png " alt=" ">
+                            <img src="icons/youtube.png " alt=" ">
+                        </div>
                     </div>
-                </div>
-                <div class="adress ">
-                    <div class="metka "><img src="./icons/metka.png " alt="metka "></div>
-                    <div class="adress_txt ">
-                        <p>м.Ізмаїл, проспект Суворова, 62</p>
+                    <div class="footer_text ">
+                        <p>У нашому інтернет магазині ElectroWheels ви можете купити персональний електротранспорт за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір. На сторінках
+                            нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 рік.</p>
                     </div>
 
-                </div>
+
+
+                    <div class="contacts_info">
+                        <div class="contacts">
+                            <div class="phone"><img src="./icons/phone.png " alt="phone "></div>
+                            <div class="number ">
+                                <p>096-760-52-21</p>
+                            </div>
+                        </div>
+                        <div class="adress ">
+                            <div class="phone"><img src="./icons/metka.png " alt="metka "></div>
+                            <div class="adress_txt ">
+                                <p>м.Ізмаїл, проспект Суворова, 62</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+
+                </footer>
             </div>
         </div>
+
+
+
+
+
 
     </div>
     <!-- Swiper JS -->
