--- a/site/promotions.html
+++ b/site/promotions.html
@@ -13,11 +13,11 @@
 <body>
     <div class="wrapper">
         <header class="header header--kat">
-            <div class="container kat">
+            <div class="container">
 
                 <div class="header__inner">
 
-                    <a class="header__logo" href="#">
+                    <a class="header__logo" href="index.html">
                         <img src="logo/logo.png" alt="ELECTROWHEELS">
                     </a>
 
@@ -78,149 +78,47 @@
             </div>
         </header>
 
-
-
         <div class="katalog_title">
             <div class="container kat">
                 <div class="title_inner">
-                    <h1>Каталог товарів</h1>
+                    <h1>Ведуться технічні роботи</h1>
                 </div>
             </div>
         </div>
-        <div class="katalog">
-            <div class="container kat">
-                <div class="katalog_inner">
 
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=scooter" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/1.jpg" alt="">
+        <!-- <div class="title_contacts">
+            <div class="container">
+                <div class="inner_contacts">
+                    <div class="left_contacts">
+                        <div class="items_contacts">
+                            <div class="item">
+                                <div class="item_photo">
+                                    <img src="./icons/phone.png " alt="">
+                                </div>
+                                <div class="item_text">
+                                    <p>+(38)068-791-37-60</p>
+
                                 </div>
                             </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Електросамокати</p>
+                            <div class="item">
+                                <div class="item_photo"></div>
+                                <div class="item_text"></div>
                             </div>
-                        </a>
-
-                    </div>
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=monowheel" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/2.png" alt="">
-                                </div>
+                            <div class="item">
+                                <div class="item_photo"></div>
+                                <div class="item_text"></div>
                             </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Моноколеса</p>
-                            </div>
-                        </a>
-
+                        </div>
                     </div>
 
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=giroscooter" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/3.jpg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Гiроскутери</p>
-                            </div>
-                        </a>
 
-                    </div>
-                    <div class="div_circle">
-                        <a href="onetype_katalog.html?type=girobord" class="circle_link">
-                            <div class="circle">
-                                <div class="circle_img">
-                                    <img src="katalog_imgs/4.jpg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="circletext_link">
-                            <div class="circle_text">
-                                <p>Гiроборди</p>
-                            </div>
-                        </a>
 
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Електросамокати</h1>
                 </div>
             </div>
-        </div>
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="scooter">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Моноколеса</h1>
-                </div>
-            </div>
-        </div>
+        </div> -->
 
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="monowheel">
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Гіроскутери</h1>
-                </div>
-            </div>
-        </div>
-
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="giroscooter">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="scooters_title">
-            <div class="container kat">
-                <div class="scooterstitle_inner">
-                    <h1>Гіроборди</h1>
-                </div>
-            </div>
-        </div>
-
-        <div class="title4">
-            <div class="container kat">
-                <div class="innerScooter">
-                    <div class="goods" id="girobord">
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="title_footer">
             <div class="logo_contacts">
