--- a/site/contacts.html
+++ b/site/contacts.html
@@ -13,11 +13,11 @@
 <body>
     <div class="wrapper">
         <header class="header header--kat">
-            <div class="container kat">
+            <div class="container">
 
                 <div class="header__inner">
 
-                    <a class="header__logo" href="#">
+                    <a class="header__logo" href="index.html">
                         <img src="logo/logo.png" alt="ELECTROWHEELS">
                     </a>
 
@@ -29,25 +29,25 @@
                         <ul class="header__list">
 
                             <li class="header__item">
-                                <a href="#" class="header__link">
+                                <a href="katalog.html" class="header__link">
                                     Каталог
                                 </a>
 
                                 <ul class="header__sublist">
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">Електросамокати</a>
+                                        <a class="header__sublink" href="onetype_katalog.html?type=scooter">Електросамокати</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">Моноколеса</a>
+                                        <a class="header__sublink" href="onetype_katalog.html?type=monowheel">Моноколеса</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">Гіроскутери</a>
+                                        <a class="header__sublink" href="onetype_katalog.html?type=giroscooter">Гіроскутери</a>
                                     </li>
 
                                     <li class="header__subitem">
-                                        <a class="header__sublink" href="#">
+                                        <a class="header__sublink" href="onetype_katalog.html?type=girobord">
                                             Гіроборди 
                                         </a>
                                     </li>
@@ -55,16 +55,20 @@
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Акції</a>
+                                <a href="contacts.html" class="header__link">Контакти</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Про нас</a>
+                                <a href="about_us.html" class="header__link">Про нас</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Контакти</a>
+                                <a href="promotions.html" class="header__link">Акції</a>
                             </li>
+
+
+
+
 
                         </ul>
                     </nav>
@@ -77,11 +81,50 @@
         <div class="katalog_title">
             <div class="container kat">
                 <div class="title_inner">
-                    <h1>Каталог товарів</h1>
+                    <h1>Контакти</h1>
                 </div>
             </div>
         </div>
 
+        <div class="title_contacts">
+            <div class="container">
+                <div class="inner_contacts">
+                    <div class="left_contacts">
+                        <div class="items_contacts">
+                            <div class="item">
+                                <div class="item_photo">
+                                    <img src="./icons/phone.png " alt="">
+                                </div>
+                                <div class="item_text">
+                                    <p>+(38)068-791-37-60</p>
+
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_photo">
+                                    <img src="./icons/mail.png " alt="">
+                                </div>
+                                <div class="item_text">
+                                    <p>bogdanizizmaila@gmail.com</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_photo"><img src="./icons/metka.png " alt="metka "></div>
+                                <div class="item_text">м.Ізмаїл, проспект Суворова, 62</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right_contacts">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9078016667595!2d28.835537715543175!3d45.35067337909977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b765f8f9492689%3A0x4046dda8d356b387!2z0L_RgNC-0YHQvy4g0KHRg9Cy0L7RgNC-0LLQsCwgNjIsINCY0LfQvNCw0LjQuywg0J7QtNC10YHRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNjg2MDE!5e0!3m2!1sru!2sua!4v1608104146223!5m2!1sru!2sua"
+                            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </div>
 
 
 
