--- a/site/onetype_katalog.html
+++ b/site/onetype_katalog.html
@@ -55,16 +55,20 @@
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Акції</a>
+                                <a href="contacts.html" class="header__link">Контакти</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Про нас</a>
+                                <a href="about_us.html" class="header__link">Про нас</a>
                             </li>
 
                             <li class="header__item">
-                                <a href="#" class="header__link">Контакти</a>
+                                <a href="promotions.html" class="header__link">Акції</a>
                             </li>
+
+
+
+
 
                         </ul>
                     </nav>
