--- a/site/katalog.html
+++ b/site/katalog.html
@@ -17,7 +17,7 @@
 
                 <div class="header__inner">
 
-                    <a class="header__logo" href="#">
+                    <a class="header__logo" href="index.html">
                         <img src="logo/logo.png" alt="ELECTROWHEELS">
                     </a>
 
